# Thesis-Smart-Slicing-rl-revised

./: .gitignore  README.md  Thesis-RL-Notebook.ipynb  Thesis_Smart_Slicing_rl(2).ipynb  pyproject.toml  requirements.txt
config/: experiment.yaml
config/data/: loader_example.yaml  synthetic_small.yaml
config/env/: default.yaml  reward_simple.yaml
config/eval/: default.yaml
config/model/: dqn_default.yaml  dqn_dueling.yaml
config/train/: medium.yaml  small.yaml
sfc_rl/: __init__.py  cli.py
sfc_rl/baselines/: __init__.py  exhaustive_solver.py  random_policy.py
sfc_rl/data/: __init__.py  dataset_generator.py  dataset_provider.py  generators.py  lazy_loader.py  loaders.py  schemas.py  vn_request_simulator.py
sfc_rl/env/: __init__.py  action_space.py  qoe.py  reward.py  sfc_env.py  state_encoders.py
sfc_rl/models/: __init__.py  dqn.py  networks.py  replay_buffer.py
sfc_rl/train/: __init__.py  evaluator.py  metrics.py  plots.py  trainer.py
sfc_rl/utils/: __init__.py  logging.py  registry.py  seed.py  serialization.py  tensorboard.py
tests/: __init__.py  test_baselines.py  test_env.py  test_exhaustive_solver.py  test_lazy_loader.py  test_masking.py  test_metrics.py  test_replay.py  test_results.txt
